@@ -4,6 +4,9 @@ Changelog
 1.0b10 - Unreleased
 ------------------
 
+* Disable socket timeouts during maintenance tasks.
+  [witsch]
+
 * Close the response object after searching in order to avoid
   `ResponseNotReady` errors triggering duplicate queries.
   [witsch]
